fix(tabs): update style tokens and hide scrollbars

--- a/packages/carbon-web-components/src/components/tabs/tabs.scss
+++ b/packages/carbon-web-components/src/components/tabs/tabs.scss
@@ -28,6 +28,7 @@ $inset-transition: inset 110ms motion(standard, productive);
     position: relative;
     overflow: scroll;
     height: 42px; // for some reason, overflow: hidden shrinks the content
+    scrollbar-width: none;
 
     &::-webkit-scrollbar {
       display: none;
@@ -123,18 +124,18 @@ $inset-transition: inset 110ms motion(standard, productive);
 
 :host(#{$prefix}-tabs[type='contained'])
   .#{$prefix}--tabs-nav-content-container {
-  height: rem(48px);
+  height: $spacing-09;
 }
 
 :host(#{$prefix}-tab[type='contained']) {
   background-color: $layer-accent-01;
 
   a.#{$prefix}--tabs__nav-link {
-    height: rem(48px);
+    height: $spacing-09;
     padding: $spacing-03 $spacing-05;
     // height - vertical padding
     /* stylelint-disable declaration-property-unit-whitelist */
-    line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
+    line-height: calc(#{$spacing-09} - (#{$spacing-03} * 2));
   }
 }
 
@@ -206,7 +207,7 @@ $inset-transition: inset 110ms motion(standard, productive);
 
   .#{$prefix}--tabs__nav-link {
     // height - vertical padding
-    line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
+    line-height: calc(#{$spacing-09} - (#{$spacing-03} * 2));
     // Draws the border without affecting the inner-content
     box-shadow: inset 0 2px 0 0 $interactive;
     border-bottom: none;
